src/test/ui/in-band-lifetimes/mismatched_trait_impl-2.stderr
error: `impl` item signature doesn't match `trait` item signature
  --> $DIR/mismatched_trait_impl-2.rs:8:5
   |
LL |     fn deref(&self) -> &dyn Trait {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ found fn(&Struct) -> &dyn Trait
   |
   = note: expected: fn(&Struct) -> &(dyn Trait + 'static)
              found: fn(&Struct) -> &dyn Trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
